codebase/kg-v1/src/k8s/ingress/deployment.yaml
#TODO: Remove thi service and put an APIDOC in place
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld
  template:
    metadata:
      labels:
        app: aks-helloworld
    spec:
      containers:
      - name: aks-helloworld
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: aks-helloworld

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-entity-api-deployment
  labels:
    app: add-entity-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: add-entity-api
  template:
    metadata:
      labels:
        app: add-entity-api
    spec:
      containers:
      - name: add-entity-api
        image: jiocontainerregistry.azurecr.io/knowledge_graph/add_entity_api:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 50002
---
apiVersion: v1
kind: Service
metadata:
  name: add-entity-service
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: add-entity-api
  ports:
    - port: 80
  type: ClusterIP
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-collection-type-api-deployment
  labels:
    app: add-collection-type-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: add-collection-type-api
  template:
    metadata:
      labels:
        app: add-collection-type-api
    spec:
      containers:
      - name: add-collection-type-api
        image: jiocontainerregistry.azurecr.io/knowledge_graph/add_collection_type_api:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 50001
---
apiVersion: v1
kind: Service
metadata:
  name: add-collection-type-service
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: add-collection-type-api
  ports:
    - port: 50001
  type: ClusterIP
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sg-ingress
  namespace: storage-garden
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /add-entity(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: add-entity-service
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: add-collection-type-service
            port:
              number: 50001
